--- a/client/src/styles/pages/about.module.css
+++ b/client/src/styles/pages/about.module.css
@@ -3,6 +3,11 @@
   position: relative;
   z-index: 199;
 }
+.mobContainer{
+  overflow: hidden;
+  position: relative;
+  z-index: 199;
+}
 @media screen and (width < 480px) {
   .heading {
     font-family: "Bangers";
@@ -14,6 +19,11 @@
   .container {
     font-family: "Poppins";
     padding: 15vh 0;
+    margin: auto;
+    width: 80vw;
+  }
+  .mobContainer {
+    font-family: "Poppins";
     margin: auto;
     width: 80vw;
   }
@@ -61,6 +71,11 @@
     margin: auto;
     width: 80vw;
   }
+  .mobContainer {
+    font-family: "Poppins";
+    margin: auto;
+    width: 80vw;
+  }
 
   .imgContainer {
     display: flex;
@@ -102,6 +117,11 @@
   .container {
     font-family: "Poppins";
     padding-top: 8rem;
+    margin: auto;
+    width: 80vw;
+  }
+  .mobContainer {
+    font-family: "Poppins";
     margin: auto;
     width: 80vw;
   }
